S20-28, swagger spec was refactored as requested from frontend team
